force-app/main/default/objects/OrderItem/fields/Additional_Field_Label_17__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_Label_17__c</fullName>
    <label>Additional Field Label 17</label>
    <length>50</length>
    <type>Text</type>
</CustomField>