force-app/main/default/objects/OrderItem/fields/Additional_Field_Value_15__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_Value_15__c</fullName>
    <label>Additional Field Value 15</label>
    <length>50</length>
    <type>Text</type>
</CustomField>