force-app/main/default/objects/OrderItem/fields/Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Instructions__c</fullName>
    <label>Additional Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>