force-app/main/default/objects/OrderItem/fields/ASP_Total__c.field-meta.xml
<CustomField>
    <fullName>ASP_Total__c</fullName>
    <label>ASP Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>