force-app/main/default/objects/OrderItem/fields/Contractor_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Earnings__c</fullName>
    <label>Contractor Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>