force-app/main/default/objects/OrderItem/fields/GL_Insurance_Cost__c.field-meta.xml
<CustomField>
    <fullName>GL_Insurance_Cost__c</fullName>
    <label>GL Insurance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>