force-app/main/default/objects/OrderItem/fields/Netsuite_Item__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Item__c</fullName>
    <label>Netsuite Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>