force-app/main/default/objects/OrderItem/fields/OA_Insurance_Cost__c.field-meta.xml
<CustomField>
    <fullName>OA_Insurance_Cost__c</fullName>
    <label>OA Insurance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>