force-app/main/default/objects/OrderItem/fields/Photo_URLs__c.field-meta.xml
<CustomField>
    <fullName>Photo_URLs__c</fullName>
    <description>This is to store the urls of the photos uploaded from scoping tool related the service being performed (order item)</description>
    <label>Photo URLs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>