force-app/main/default/objects/OrderItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>Product2.Product_Family__r.Name</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>