force-app/main/default/objects/OrderItem/fields/Service_Template__c.field-meta.xml
<CustomField>
    <fullName>Service_Template__c</fullName>
    <label>Service Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>