force-app/main/default/objects/OrderItem/fields/Service_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Template_Id__c</fullName>
    <label>Service Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>